# WestHousingModel

./: .coverage  .envrc  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  README.md  architecture.md  environment.yml  perf-smoke-report.json  pyproject.toml  sources.yml  tmp_base.csv  tmp_haz.csv
.cursor/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: README.md  sources.yml  sources_supplement.yml
docs/: feature_dictionary.md  rulebook.md
docs/adr/: 0000-template.md  0001-logging-and-observability.md  0002-testing-strategy.md
failures/connector.census_acs/: 20250929T173652159751.csv
failures/connector.eia_v2/: 20250929T174532781802.csv
failures/connector.fcc_bdc/: 20250929T174532780592.csv
failures/connector.hud_fmr/: 20250929T174532781204.csv
failures/connector.noaa_storm_events/: 20250929T174532779332.csv
failures/connector.usgs_designmaps/: 20250929T174532778578.csv
failures/connector.usgs_epqs/: 20250929T174659700567.csv
openspec/: AGENTS.md  project.md
openspec/changes/add-aker-fit-scoring/: tasks.md
openspec/changes/add-api-connection-tests/: proposal.md  (+1 more)
src/WestHousingModel/: __init__.py
src/WestHousingModel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/west_housing_model/: __init__.py  settings.py
tests/: README.md  conftest.py  factories.py  test_acs_connector.py  test_aker_fit_scoring.py  test_basic.py  test_census_acs_connector.py  test_cli.py  test_cli_golden.py  test_cli_observability.py  test_cli_strict.py  test_connector_pipelines.py  test_connectors_registration.py  test_deal_quality_scoring.py  test_golden_pipeline.py  test_logging_utils.py  test_ops_features.py  test_place_features.py  test_registry_loader.py  test_repository_logging.py  test_settings_scoring_weights.py  test_site_features.py  test_ui_helpers.py  test_valuation.py
tests/data/: test_additional_connectors.py  test_catalog.py  test_repository_cache.py  test_usfs_wildfire_connector.py  test_usgs_designmaps_connector.py
tests/integration/: test_cli_contracts.py  test_cli_integration.py  test_connectors_live.py  test_feature_pipeline.py  test_logging_integration.py  test_performance_smoke.py  test_repository_integration.py  test_ui_smoke.py  test_valuation_integration.py
tests/performance/: test_smoke.py
tmp-cache-debug/: cache_index.sqlite
(+184 files in other folders)
